add new gui components for tests

--- a/server/UI/main_server.ui
+++ b/server/UI/main_server.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>463</width>
-    <height>348</height>
+    <height>358</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>40</y>
+     <y>50</y>
      <width>441</width>
      <height>301</height>
     </rect>
@@ -39,7 +39,7 @@
   <widget class="QPushButton" name="pushButton_work_db">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>160</x>
      <y>10</y>
      <width>131</width>
      <height>23</height>
@@ -47,6 +47,35 @@
    </property>
    <property name="text">
     <string>Работа с вопросами</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="radioButton_common_test">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>91</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Общий тест</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="radioButton_standart_bliz_test">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>30</y>
+     <width>151</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Стандартный блиц тест</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
