--- a/client/UI/client_main.ui
+++ b/client/UI/client_main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>235</width>
-    <height>86</height>
+    <width>242</width>
+    <height>136</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>20</y>
+     <y>60</y>
      <width>161</width>
      <height>23</height>
     </rect>
@@ -30,13 +30,39 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>50</y>
+     <y>90</y>
      <width>161</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Тест №2</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_variant1">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Вариант 1</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_variant2">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>10</y>
+     <width>91</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Вариант 2</string>
    </property>
   </widget>
  </widget>
