--- a/client/UI/text1_form_var1.ui
+++ b/client/UI/text1_form_var1.ui
@@ -13,70 +13,24 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QScrollArea" name="scrollArea">
-   <property name="geometry">
+  <widget class="QAxWidget" name="axWidget">
+   <property name="geometry" stdset="0">
     <rect>
      <x>20</x>
      <y>20</y>
      <width>551</width>
-     <height>671</height>
+     <height>661</height>
     </rect>
    </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>549</width>
-      <height>669</height>
-     </rect>
-    </property>
-    <widget class="QPlainTextEdit" name="plainTextEdit">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>40</y>
-       <width>531</width>
-       <height>221</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="plainText">
-      <string>(1)A passive component of a circuit is an electronic component containing1 no source of power, in contrast to active components. (2)The three basic elements used2 in electric circuits are the resistor, capacitor, and inductor.  (3)They are considered to be important components of an electric circuit. (4)They also have their own standard symbols and units of measurement.
-(5)Restricting3 the flow of electrons or electric current to a certain level is called4 resistance and the device or component used to restrict5 the electric current is called resistor.
-(6)The amount of electric current restricted by the resistor is determined by using6 the Ohm’s Law equation.</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>10</y>
-       <width>451</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Passive Components of a Circuit (~ 4100)</string>
-     </property>
-    </widget>
-   </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QAxWidget</class>
+   <extends>QWidget</extends>
+   <header>qaxwidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
