add label to variant 1

--- a/client/UI/variant_1/zadanie2_part1_var1.ui
+++ b/client/UI/variant_1/zadanie2_part1_var1.ui
@@ -601,6 +601,19 @@
     <string>15</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>320</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
