--- a/client/UI/variant_1/zadanie1_2_3_part2_var1.ui
+++ b/client/UI/variant_1/zadanie1_2_3_part2_var1.ui
@@ -847,6 +847,19 @@
     <string>What happens when an electric current passes through the wire coil?</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>610</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
