--- a/client/UI/variant_1/zadanie1_part1_var1.ui
+++ b/client/UI/variant_1/zadanie1_part1_var1.ui
@@ -541,6 +541,19 @@
     <string>Далее</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>420</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
