--- a/client/UI/variant_1/zadanie3_4_5_part1_var1.ui
+++ b/client/UI/variant_1/zadanie3_4_5_part1_var1.ui
@@ -756,6 +756,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>630</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
