--- a/client/UI/variant_1/zadanie5_part2_var1.ui
+++ b/client/UI/variant_1/zadanie5_part2_var1.ui
@@ -433,6 +433,19 @@
     <string>7</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>430</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
