--- a/client/UI/variant_1/zadanie6_part1_var1.ui
+++ b/client/UI/variant_1/zadanie6_part1_var1.ui
@@ -795,6 +795,19 @@
     <string>electric</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>550</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
