--- a/client/UI/variant_1/zadanie6_part2_var1.ui
+++ b/client/UI/variant_1/zadanie6_part2_var1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>420</width>
-    <height>709</height>
+    <height>620</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -702,6 +702,19 @@
    </property>
    <property name="text">
     <string>8</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>580</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
