--- a/client/UI/variant_1/zadanie7_part1_var1.ui
+++ b/client/UI/variant_1/zadanie7_part1_var1.ui
@@ -435,6 +435,19 @@
     <string>7</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>460</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
