--- a/client/UI/variant_1/zadanie8_part1_var1.ui
+++ b/client/UI/variant_1/zadanie8_part1_var1.ui
@@ -703,6 +703,19 @@
     <string>8</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>580</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
