--- a/client/UI/variant_2/zadanie1_2_3_part2_var2.ui
+++ b/client/UI/variant_2/zadanie1_2_3_part2_var2.ui
@@ -48,7 +48,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>110</x>
      <y>600</y>
      <width>101</width>
      <height>31</height>
@@ -841,6 +841,19 @@
    </property>
    <property name="text">
     <string>Why are inductors used in electronic circuits?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>600</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
