--- a/client/UI/variant_2/zadanie1_part1_var2.ui
+++ b/client/UI/variant_2/zadanie1_part1_var2.ui
@@ -531,7 +531,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>140</x>
      <y>420</y>
      <width>101</width>
      <height>31</height>
@@ -539,6 +539,19 @@
    </property>
    <property name="text">
     <string>Далее</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>410</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
