--- a/client/UI/variant_2/zadanie3_4_5_part1_var2.ui
+++ b/client/UI/variant_2/zadanie3_4_5_part1_var2.ui
@@ -698,6 +698,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>540</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
