--- a/client/UI/variant_2/zadanie4_part2_var2.ui
+++ b/client/UI/variant_2/zadanie4_part2_var2.ui
@@ -48,7 +48,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>300</x>
      <y>610</y>
      <width>101</width>
      <height>31</height>
@@ -123,6 +123,19 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="text">
     <string>Показать текст</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>610</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
