--- a/client/UI/variant_2/zadanie6_part1_var2.ui
+++ b/client/UI/variant_2/zadanie6_part1_var2.ui
@@ -116,7 +116,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>70</x>
      <y>580</y>
      <width>101</width>
      <height>31</height>
@@ -842,6 +842,19 @@
    </property>
    <property name="text">
     <string>proportional</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>580</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
