--- a/client/UI/variant_2/zadanie6_part2_var2.ui
+++ b/client/UI/variant_2/zadanie6_part2_var2.ui
@@ -95,7 +95,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>90</x>
      <y>610</y>
      <width>101</width>
      <height>31</height>
@@ -703,6 +703,19 @@ controlled rectifiers use…</string>
    </property>
    <property name="text">
     <string>8</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>610</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
