--- a/client/UI/variant_2/zadanie7_part1_var2.ui
+++ b/client/UI/variant_2/zadanie7_part1_var2.ui
@@ -71,7 +71,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>60</x>
      <y>390</y>
      <width>101</width>
      <height>31</height>
@@ -404,6 +404,19 @@
    </property>
    <property name="text">
     <string>6</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>390</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
