--- a/client/UI/variant_2/zadanie8_part1_var2.ui
+++ b/client/UI/variant_2/zadanie8_part1_var2.ui
@@ -93,7 +93,7 @@
   <widget class="QPushButton" name="pushButton_answer">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>60</x>
      <y>550</y>
      <width>101</width>
      <height>31</height>
@@ -697,6 +697,19 @@
    </property>
    <property name="text">
     <string>8</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>550</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
